# pqc-readiness-scanner

./: .gitignore  EVALUATION.md  README.md  SCOPE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
evaluation/: classification.csv
evaluation/raw/: ansible.json  django.json  requests.json
examples/: sample_report.md
src/pqc_scan/: __init__.py  __main__.py  algorithms.py  baseline.py  cli.py  findings.py  tls_groups.py  tls_records.py
src/pqc_scan/reporters/: console.py  csv_inventory.py  cyclonedx.py  json_report.py  markdown.py  sarif.py
src/pqc_scan/scanners/: certificates.py  jwt_scan.py  source_code.py  source_code_ast.py  ssh_keys.py  tls_endpoint.py
tests/: conftest.py  test_algorithms.py  test_baseline.py  test_certificates.py  test_cli.py  test_jwt_scan.py  test_reporters.py  test_source_code.py  test_source_code_ast.py  test_ssh_keys.py  test_suppression_and_dedup.py  test_tls_endpoint_kem.py  test_tls_records.py
tests/fixtures/: ast_false_positives.py  safe_code.py  vulnerable_app.go  vulnerable_app.js  vulnerable_code.py
